--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
  
 
   <style>
-	@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-	@font-face {
-  font-family:Agatho;
-  src: url('agatho (5)/Agatho_ LightCAPS.otf');
-}
+
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
- font-family: "Prompt", serif;
+	font-family: "Prompt", serif;
+
 }
 
 
@@ -54,7 +52,7 @@ section {
 	padding: 10px;
 	white-space: nowrap;
 	border-bottom: 1px solid var(--third-color);
-	border-radius: 50px;
+	/* border-radius: 50px; */
 	box-shadow: var(--box-shadow);
 	scroll-behavior: smooth;
 
@@ -82,7 +80,7 @@ section {
     user-select: none;
     background-color:#E9E0D9; /* เพิ่มสีพื้นหลังเริ่มต้น */
     transition: background-color .3s ease;
-	font-family: Agatho;
+	font-family: "Playfair", serif;
 	font-weight: 300;
 }
 
@@ -197,7 +195,7 @@ section {
 
 .city {
 	font-size: 35px;
-	font-family: Agatho;
+	font-family: "Playfair", serif;
 	margin-bottom: 15px;
 	color: #553E2E;
 	font-weight: 300;
@@ -205,7 +203,7 @@ section {
 .city1 {
 	font-size: 30px;
 	color: #553E2E;
-	font-family: Agatho;
+	font-family: "Playfair", serif;
 	font-weight: 300;
 }
 
@@ -490,7 +488,7 @@ input#slider::-ms-tooltip {
     padding: 0 0px;
   }
   
-  .tab-menu {
+  /* .tab-menu {
     display: flex;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -499,7 +497,7 @@ input#slider::-ms-tooltip {
     gap: 8px;
 	max-width: 100%;
 	border-radius:0;
-  }
+  } */
 
   .tab-btn {
     font-size: 15px !important;
@@ -768,3 +766,4 @@ input#slider::-ms-tooltip {
 
 </body>
 </html> 
+
