--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ section {
 	right: auto;
 	bottom: 0;
 	left: auto;
-	max-width: 1100px;
+	max-width: 100%;
 	padding: 15px 50px;
 	opacity: 0;
 
